#15213 closed bug (fixed)
ASSERT FILED: cache == sBlockCaches
Reported by: | BeRUS | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86-64 |
Description
Nightly hrev53293(x86_64)
I open Queries(alf+f), enter in the search bar png, search by / boot then i click the attributes in the menu, and click Permissions, and get this error
Attachments (2)
Change History (8)
by , 6 years ago
comment:1 by , 6 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
comment:4 by , 5 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Similar issue still appear in hrev53354, 32bit. Reproduced by opening http://futuroueb.free.fr/IWBTC/game/(2D platformer browser game) in Otter browser.
comment:5 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
This was another instance of the same problem, and really should have been a separate ticket. But I've fixed it in hrev53355 anyway.
comment:6 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Appears I "missed a spot": https://xref.plausible.coop/source/xref/haiku/src/system/kernel/fs/vfs.cpp#2867
Will fix later today.